--- a/page.html
+++ b/page.html
@@ -9,5 +9,6 @@
         <h1>Hello This is Git Tutorial 1</h1>
         <h1>Hello This is Git Tutorial 2</h1>
         <h1>Hello This is Git Tutorial 3</h1>
+        <h1>Master Branch</h1>
     </body>
 </html>
