--- a/page.html
+++ b/page.html
@@ -4,11 +4,6 @@
     </head>
 
     <body>
-        <h1>Return to master</h1>
-        <h1>Hello This is Git Tutorial 1</h1>
-        <h1>Hello This is Git Tutorial 2</h1>
-        <h1>Hello This is Git Tutorial 3</h1>
-        <h1>B1 Added !</h1>
-        <h1>Hello Branch</h1>
+        <h1>Test Page</h1>
     </body>
 </html>
